tests/NormalTests/paczka2/big_fuzzy/11464321.err
Error in line 1: 5dgmUc4fnK S927 4,9
Error in line 20: 5jYwJ7oIZ A193 94,4
Error in line 22: pkINn A193 71,4
Error in line 31: pkINn S927 97,3
Error in line 49: 5dgmUc4fnK A193 23,0
Error in line 56: Iw4 S27 50,8
Error in line 43: A193 A744 71,2
Error in line 60: Iw4 S927 134,1
Error in line 50: 5dgmUc4fnK S927 1,8
Error in line 68: Iw4 A744 60,9
Error in line 71: A193 S927 184,9
Error in line 77: 5dgmUc4fnK A744 61,6
Error in line 79: 5dgmUc4fnK S927 51,4
Error in line 92: 5jYwJ7oIZ A744 28,75
Error in line 91: Upz A519 11,8
Error in line 80: 5jYwJ7oIZ S927 63,2
Error in line 102: 5jYwJ7oIZ A744 86,6
Error in line 100: I5c A744 62,3
Error in line 108: 5jYwJ7oIZ S927 93,3
Error in line 117: Upz A193 163,6
Error in line 126: Iw4 Ab44 99,9
Error in line 127: pkINn A193 68,1
Error in line 134: pkINn A744 78,9
Error in line 151: Upz A744 62,1
Error in line 153: pkINn A744 58,0
Error in line 154: pkINn A519 96,9
Error in line 122: Iw4 A744 22,3
Error in line 155: pkINn A193 24,7
Error in line 164: A193 A519 26,7
Error in line 149: 5dgmUc4fnK S927 88,5
Error in line 168: Upz A193 3,7
Error in line 170: pkINn A744 55,9
Error in line 176: A193 A193 263,3
Error in line 169: 5jYwJ7oIZ S927 17,7
Error in line 181: 5jYwJ7oIZ A193 74,9
Error in line 187: 5dgmUc4fnK A744 1,2
Error in line 188: 5dgmUc4fnK A519 6,0
Error in line 205: I5c A744 63,89
Error in line 204: I5c A519 30,3
Error in line 206: I5c A744 9,6
Error in line 208: I5c S927 43,1
Error in line 189: 5dgmUc4fnK A744 91,0
Error in line 212: I5c A744 34,6
Error in line 223: Iw4 A744 24,4
Error in line 227: A193 A519 72,1
Error in line 235: A193 S927 68,0
Error in line 234: Iw4 S927 95,0
Error in line 241: A193 A519 187,8
Error in line 249: 5dgmUc4fnK A193 7,0
